# crewAi

./: README.md  pyproject.toml
analzfrontend/: .gitignore  README.md  TODO.md  pyproject.toml  report.md
analzfrontend/knowledge/: frontend_digest_2026-03-18.md  frontend_digest_E-commerce_2026-03-19.md  frontend_digest_Editorial_2026-03-18.md
analzfrontend/src/analz_frontend/: crew.py  live_crew.py  main.py
analzfrontend/src/analz_frontend/config/: agents.yaml  live_agents.yaml  live_tasks.yaml  tasks.yaml
analzfrontend/src/analz_frontend/tools/: custom_tool.py
analzfrontend/viewer/: app.py  tools.py
analzfrontend/viewer/templates/: index.html
