[project]
name = "analz_frontend"
version = "0.1.0"
description = "analz_frontend using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools,litellm]==1.10.1"
]

[project.scripts]
analz_frontend = "analz_frontend.main:run"
run_crew = "analz_frontend.main:run"
train = "analz_frontend.main:train"
replay = "analz_frontend.main:replay"
test = "analz_frontend.main:test"
run_with_trigger = "analz_frontend.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
